fix: added overflow for newsletter

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -5,6 +5,7 @@
   background-repeat: no-repeat
   background-size: cover
   background-position: center
+  overflow-x: hidden
   &:before
     content: ''
     position: absolute
